--- a/1px.html
+++ b/1px.html
@@ -11,92 +11,39 @@
 <body>
 
 
-<h1>{{ title2 }}</h1>
-<h2>{{ title3 }}</h2>
+<h1>{{ title }}</h1>
 
-<p>{{ title2 + title3 }}</p>
+<h1>{{ title if title.length > 10 }}</h1>
 
-<p (click.prevent.stop.self.capture.once)="hello()">{{ c$ }}</p>
+<input type="text" [(value)]="title">
 
-<div [style.width.%]="100"></div>
+<button (click)="alert(title) if title.length > 10">adfasfsd</button>
 
-<ul>
-	<li *repeat="arr as a, index">hello~~ {{ a }} {{ index }}</li>
-</ul>
-
-<ul>
-	<li *repeat="arr as a, index">hello~~ {{ a }} {{ index }}</li>
-</ul>
+<todo-app>
+	<h1>asdkfjaklfdsjlksd</h1>
+</todo-app>
 
 
 <script>
-	// let b = document.body;
-	//
-	// b.title2 = "hello";
-	// b.title3 = "world";
-	// b.arr = ["a", "b", "c", "d"];
-	//
-	// let click$ = Observable.fromEvent(document, "click").subscribe(event => {
-	//
-	//
-	// 	console.log("!");
-	//
-	// });
-	//
-	// let stop$ = Observable.empty();
-	//
-	// b.c$ = Observable.interval(500).map(i => i).takeUntil(stop$).map(i => i * 10);
-	//
-	//
-	// function test() {
-	// 	b.title2 = "good";
-	// 	b.title3 = "boy";
-	// }
 
-	/// auto $localStorage!!!
+let c = $compile(document.body);
+c.title = "aslkdfjalsdkjfkasd"
 
-	// let o = {};
-	//
-	// let o2 = new Proxy(o, {
-	// 	set(target, p, value, receiver) {
-	// 		console.log("Save!!")
-	// 		target[p] = value;
-	// 		return true;
-	// 	}
-	// });
-
-	// let revocable = Proxy.revocable({}, {
-	//
-	// });
-	//
-	// revocable.revoke();
+c.alert = function(v) {
 
 
-	// $compile(b);
+	alert(v);
+}
 
-	var todos = "hello world name".split(" ").map(v => {
-		return {title: v}
-	});
-
-	var x = {a: 100};
-
-	let c = $parse("a => {a: a + 500}")({a: 100, b: 100});
-
-	console.log(c(700));
-
-	//
-	// let e = $parse("a = 300")(x);
-	//
-	// console.log(e);
-	//
-	// let o = {todos};
-	//
-	// let d = $parse("num = todos.map((todo,index) => todo.title + 'abc' + index)").watch$(o).subscribe(v => {
-	// 	console.log(v);
-	// });
-
-
-	// console.log(d);
+// let $ = new JSContext(window);
+//
+// window.x = 42;
+// window.y = -5;
+// window.z = 0;
+//
+// let ret = $.evaluate("z = x if y > 0");
+//
+// console.log(ret);
 
 
 </script>
