--- a/todomvc-app/index.html
+++ b/todomvc-app/index.html
@@ -36,16 +36,14 @@
 				<label for="toggle-all">Mark all as complete</label>
 				<ul class="todo-list">
 					<li *repeat="todos as todo, index" [hidden]="!checkFilter(filter, todo.completed)"
-							[class.completed]="todo.completed" [class.editing]="editingTodo.todo === todo">
+							[class.completed]="todo.completed" [class.editing]="editingTodo === todo">
 						<div class="view">
 							<input class="toggle" type="checkbox" [(checked)]="todo.completed">
-							<label (dblclick)="setEditingTodo(todo)">{{ todo.title }}</label>
+							<label (dblclick)="setEditingTodo(todo);">{{ todo.title }}</label>
 							<button class="destroy" (click)="removeTodo(todo)"></button>
 						</div>
-						<form (submit)="applyTodo(todo)">
-							<input name="title" class="edit" [(value)]="editingTodo.title" (change)="applyTodo(todo)"
-									(keydown|esc)="revertTodo()" .focus()="editingTodo.todo === todo">
-						</form>
+						<input #title class="edit" [value]="todo_title" (change)="commitTodo(todo, title.value) if editingTodo"
+								(keydown|esc)="revertTodo(todo)" .focus()="editingTodo === todo">
 					</li>
 				</ul>
 			</section>
@@ -53,7 +51,7 @@
 			<!-- This footer should hidden by default and shown when there are todos -->
 			<footer class="footer" [hidden]="todos.length === 0">
 				<!-- This should be `0 items left` by default -->
-				<span class="todo-count"><strong>{{ num_items_left || 0 }}</strong> {{ num_items_left === 1 ? "item" : "items" }} left</span>
+				<span class="todo-count"><strong>{{ num_items_left || 0 }}</strong> item{{ num_items_left !== 1 ? 's': '' }} left</span>
 				<!-- Remove this if you don't implement routing -->
 				<ul class="filters">
 					<li>
@@ -67,9 +65,7 @@
 					</li>
 				</ul>
 				<!-- Hidden if no completed items are left ↓ -->
-				<button class="clear-completed" [hidden]="num_items_left> 0" (click)="clearCompleted()">Clear
-					completed
-				</button>
+				<button class="clear-completed" [hidden]="num_items_left> 0" (click)="clearCompleted()">Clear completed</button>
 			</footer>
 		</section>
 	</template>
@@ -162,20 +158,22 @@ module.component("todo-app", function() {
 		},
 
 		setEditingTodo(todo) {
-			this.editingTodo = Object.create(todo);
-			this.editingTodo.todo = todo;
+			this.editingTodo = todo;
+			this.todo_title = todo.title;
 		},
 
-		applyTodo(todo) {
+		commitTodo(todo, title) {
 			if (!this.editingTodo) return;
-			let title = this.editingTodo.title;
 			this.editingTodo = null;
+
 			title = (title || "").trim();
 			if (!title) return this.removeTodo(todo);
+			todo.title = title;
 		},
 
 		revertTodo() {
 			this.editingTodo = null;
+			this.todo_title = null;
 		},
 
 		clearCompleted() {
