--- a/todomvc-app/index.html
+++ b/todomvc-app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" module="app">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +21,7 @@
 <todo-app></todo-app>
 
 <web-component name="todo-app">
-	<template>
+	<template id="todo-app">
 		<section class="todoapp">
 			<header class="header">
 				<h1>todos</h1>
@@ -72,11 +72,9 @@
 </web-component>
 
 <script>
-module.component("todo-app", function() {
+app.component("todo-app", function() {
 	return {
 		init($) {
-			window.app = this;
-
 			this.todos = [
 				{
 					title: "123",
