폴더 구조 정리

--- a/examples/todomvc-app/index.html
+++ b/examples/todomvc-app/index.html
@@ -9,12 +9,12 @@
 	<!-- CSS overrides - remove if you don't need it -->
 	<link rel="stylesheet" href="css/app.css">
 
-	<script src="../js/observable.js"></script>
-	<script src="../js/module.js"></script>
-	<script src="../js/parse.js"></script>
-	<script src="../js/compile.js"></script>
-	<script src="../js/component.js"></script>
-	<script src="../js/util.js"></script>
+	<script src="../../js/observable.js"></script>
+	<script src="../../js/module.js"></script>
+	<script src="../../js/parse.js"></script>
+	<script src="../../js/compile.js"></script>
+	<script src="../../js/component.js"></script>
+	<script src="../../js/util.js"></script>
 </head>
 <body>
 
