--- a/test/1px.grid-layout.html
+++ b/test/1px.grid-layout.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
-	<script src="js/observable.js"></script>
-	<script src="js/module.js"></script>
-	<script src="js/parse.js"></script>
-	<script src="js/compile.js"></script>
-	<script src="js/component.js"></script>
+	<script src="../js/observable.js"></script>
+	<script src="../js/module.js"></script>
+	<script src="../js/parse.js"></script>
+	<script src="../js/compile.js"></script>
+	<script src="../js/component.js"></script>
 </head>
 
 <style>
