--- a/index.html
+++ b/index.html
@@ -10,50 +10,27 @@
 <my-test>hello</my-test>
 
 
-<script>
-exports.install = function(module, confg) {
-
-	const {component, directive, pipe, template} = module;
-
-	class TodoApp extends HTMLElement {
-		init($) {
-			this.todos = [];
-		}
-
-		addTodo(todo) {
-
-		}
-	}
-
-	function _pipe() {
-
-	}
-
-	function clickHandler() {
-
-	}
-
-	component("todo-app", TodoApp);
-	pipe("pipe", _pipe);
-	directive("(click)", clickHandler);
+<script type="module">
+const {JSContext} = require("1px");
+const {$parse} = require("1px");
 
 
-	// template`dkfdjsalkfjalksdf`.bind(x).render(document.body);
-}
+let o = {a: 100, b: 100};
+
+let $ = JSContext.connect(o);
+
+let x = $.evaluate("1+3");
 
 
-// class M {
-// }
-//
-//
-// console.log(M.prototype);
-//
-// let m = new M();
-// console.log(m.todos);
+console.log(x);
 
 
-// customElements.define("my-test", Test);
-// let x = $parse("a = 10 if b > 10");
+// console.log(a);
+
+
+
+
+
 </script>
 
 
