--- a/test/module.html
+++ b/test/module.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
-	<script src="../js/observable.js"></script>
+	<script src="../src/js/observable.js"></script>
 	<!--<script src="js/watch.js0"></script>-->
 	<!--<script src="js/module.js0"></script>-->
 	<!--<script src="js/parse.js0"></script>-->
