--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
-	<script src="js/1px.js"></script>
+	<script src="src/js/1px.js"></script>
 </head>
 <body>
 
@@ -11,24 +11,24 @@
 
 
 <script type="module">
+const {Observable} = require("1px");
 const {JSContext} = require("1px");
 const {$parse} = require("1px");
 
 
-let o = {a: 100, b: 100};
+
+
+window.o = {a: 100, b: 100};
 
 let $ = JSContext.connect(o);
 
-let x = $.evaluate("1+3");
+
+$`a`.subscribe(x => {
 
 
-console.log(x);
+	console.log(x);
 
-
-// console.log(a);
-
-
-
+})
 
 
 </script>
