--- a/test/1px.html
+++ b/test/1px.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
-	<script src="../js/observable.js"></script>
-	<script src="../js/module.js"></script>
-	<script src="../js/parse.js"></script>
-	<script src="../js/compile.js"></script>
+	<script src="../src/js/observable.js"></script>
+	<script src="../src/js/module.js"></script>
+	<script src="../src/js/parse.js"></script>
+	<script src="../src/js/compile.js"></script>
 </head>
 <body>
 
