--- a/module.html
+++ b/module.html
@@ -7,152 +7,126 @@
 <body>
 
 <script>
-(function() {
+function Register(value) {
+	this.queue = Object.create(null);
+	this.value = value || Object.create(null);
+}
 
-	function Subject(value) {
-		this.queue = Object.create(null);
-		this.value = value || Object.create(null);
-	}
+Register.prototype = {
 
-	Subject.prototype = {
-		subscribe(name, callback) {
-			if (name in this.value) {
-				return callback(this.value[name]);
-			}
+	isDefined(name) {
+		return name in this.value;
+	},
 
-			this.queue[name] = this.queue[name] || [];
-			this.queue[name].push(callback);
-		},
+	whenDefined(name, callback, ...args) {
+		this.queue[name] = this.queue[name] || [];
+		this.queue[name].push([callback, args]);
 
-		publish(name, value) {
-			this.value[name] = value;
-
-			if (this.queue[name]) {
-				let q = this.queue[name].slice();
-				delete this.queue[name];
-				q.forEach(callback => callback(value));
-			}
+		if (name in this.value) {
+			return callback(name, this.value[name], ...args);
 		}
-	};
+	},
 
+	define(name, value) {
+		this.value[name] = value;
 
-	let $value = Object.create(null);
-	let $factory = Object.create(null);
-	let $subject_value = new Subject($value);
-	let $subject_factory = new Subject($factory);
-
-
-	function value(name, value) {
-		$subject_value.publish(name, value);
-	}
-
-	function factory(name, factoryFn) {
-		if (!factoryFn.$inject) {
-			let str = String(factoryFn);
-			str = str.slice(str.indexOf("(") + 1, str.indexOf(")")).trim();
-			factoryFn.$inject = str ? str.split(/\s*,\s*/) : [];
-		}
-		$subject_factory.publish(name, factoryFn);
-	}
-
-
-	function require(names, callback) {
-
-		if (!Array.isArray(names)) {
-			names = [names];
-		}
-
-		let args = [];
-		let count = 0;
-
-		let ret;
-
-		names.forEach((name, index) => {
-			invokeFactory(name);
-			$subject_value.subscribe(name, function(value) {
-				args[index] = value;
-				count++;
-				if (count === names.length) {
-					ret = args;
-					callback.apply(null, args);
-				}
+		if (this.queue[name]) {
+			this.queue[name].forEach(o => {
+				let [callback, args] = o;
+				callback(name, value, ...args);
 			});
-		});
-
-		return ret;
-	}
-
-
-	function invokeFactory(name) {
-		let exist = false;
-		$subject_value.subscribe(name, () => exist = true);
-		if (exist) return;
-
-		$subject_factory.subscribe(name, factory => {
-			require(factory.$inject, function() {
-
-				/// test용
-				factory.invokeCount = factory.invokeCount || 0;
-				factory.invokeCount++;
-
-				$subject_value.publish(name, factory.apply(null, arguments));
-			});
-		});
-	}
-
-	function createPrefixModule(prefix) {
-		return {
-			value(name, value) {
-				return value(prefix + name, value);
-			},
-
-			factory(name, value) {
-				return factory(prefix + name, value);
-			},
-
-			require(names, value) {
-				if (!Array.isArray(names)) names = [names];
-				names = names.map(name => prefix + name);
-				return require(names, value);
-			}
 		}
 	}
+};
 
 
-	window.$module = {value, factory, require};
-	window.$module.directive = createPrefixModule("directive.");
-	window.$module.component = createPrefixModule("component.");
-	window.$module.service = createPrefixModule("server.");
-	window.$module.pipe = createPrefixModule("pipe.");
-})();
+const $$values = new Register();
+const $$factories = new Register();
+
+function _makeFactory(fn) {
+	/// @TODO: Array Factory... ["aaa", "ddd", function(a,b,c)]
+
+	if (fn.$inject) {
+		return fn;
+	}
+
+	let s = fn.toString();
+	fn.$inject = s.slice(s.indexOf("(") + 1, s.indexOf(")")).split(/\s*,\s*/).filter(x => x);
+	return fn;
+}
+
+function _invokeValue(name, value, index, args, fn) {
+	args[index] = value;
+
+	for (let k = 0; k < args.length; k++) {
+		if (!(k in args)) return;
+	}
+
+	fn.apply(null, args);
+}
+
+function _invokeFactory(name, value, index, args, fn) {
+	if ($$values.isDefined(name)) {
+		return _invokeValue(name, value, index, args, fn);
+	}
+
+	function factory() {
+		$$values.define(name, value.apply(null, arguments));
+	}
+
+	factory.$inject = value.$inject;
+
+	$module.require(factory);
+}
 
 
-$module.factory("test2", function(a, test, c) {
+/// exports
+function $module() {
+	/// @TODO ...
+}
 
+$module.value = function(name, value) {
+	$$values.define(name, value);
+};
+
+$module.factory = function(name, factory) {
+	$$factories.define(name, _makeFactory(factory));
+};
+
+$module.require = function(fn) {
+	fn = _makeFactory(fn);
+	if (!fn.$inject.length) {
+		fn();
+		return;
+	}
+
+	let args = Array(fn.$inject.length);
+	fn.$inject.forEach((name, index) => {
+		$$factories.whenDefined(name, _invokeFactory, index, args, fn);
+		$$values.whenDefined(name, _invokeValue, index, args, fn);
+	});
+};
+
+
+$module.factory("name", function(a, b) {
 	return function() {
-		console.log(a, test, c);
+		return "name function";
 	}
 });
 
 
-$module.require(["a", "b", "c"], function(a, b, c) {
-	console.log("require", a, b, c);
-});
-
-
-$module.require(["test2"], function(test2) {
-	console.log(test2);
-});
-
-
-$module.value("a", "A");
 $module.value("b", "B");
+
+
+$module.require(function(a, b, name) {
+	console.log("hello", a, b, name(), Math.random())
+});
+
+
 $module.value("c", "C");
 
 
-$module.factory("test", function(a, b, c) {
-	return {a, b, c}
-});
+$module.value("a", "A");
 
 
 </script>
