--- a/audio/mic.html
+++ b/audio/mic.html
@@ -5,7 +5,7 @@
 	<title>mic</title>
 	<link rel="stylesheet" href="style.css"/>
 	<link rel="preload" href="components/index.html" as="fetch" crossorigin type="module"/>
-	<script src="../src/js/1px.js"></script>
+	<script src="../old/js4/1px.js"></script>
 </head>
 <body>
 
