--- a/es6.html
+++ b/es6.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
-	<script src="src/js/1px.js"></script>
+	<script src="old/js4/1px.js"></script>
 </head>
 <body>
 
@@ -13,7 +13,7 @@
 <script type="module">
 
 import {$module} from "./src/js2/1px.js";
-// import {Observable} from "./src/js2/1px.js";
+// import {Observable} from "./src/js2/1px.js4";
 
 
 $module.component("ui-view", function(html, WebComponent) {
