--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
-	<script src="src/js/1px.js"></script>
+	<script src="old/js4/1px.js"></script>
 </head>
 <body>
 
