--- a/test/dom-parser.html
+++ b/test/dom-parser.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
-	<!--<script src="js/observable.js"></script>-->
-	<!--<script src="js/module.js"></script>-->
-	<!--<script src="js/parse.js"></script>-->
-	<!--<script src="js/compile.js"></script>-->
+	<!--<script src="js4/observable.js4"></script>-->
+	<!--<script src="js4/module.js4"></script>-->
+	<!--<script src="js4/parse.js4"></script>-->
+	<!--<script src="js4/compile.js4"></script>-->
 </head>
 <body>
 
