--- a/test/index.html
+++ b/test/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<meta charset="utf-8"/>
-	<script src="../src/js/observable.js"></script>
-	<script src="../src/js/module.js"></script>
-	<script src="../src/js/parse.js"></script>
-	<script src="../src/js/compile.js"></script>
-	<script src="../src/js/component.js"></script>
+	<script src="../old/js4/observable.js"></script>
+	<script src="../old/js4/module.js"></script>
+	<script src="../old/js4/parse.js"></script>
+	<script src="../old/js4/compile.js"></script>
+	<script src="../old/js4/component.js"></script>
 </head>
 
 <body>
