--- a/test/1px.html
+++ b/test/1px.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
-	<script src="../src/js/observable.js"></script>
-	<script src="../src/js/module.js"></script>
-	<script src="../src/js/parse.js"></script>
-	<script src="../src/js/compile.js"></script>
+	<script src="../old/js4/observable.js"></script>
+	<script src="../old/js4/module.js"></script>
+	<script src="../old/js4/parse.js"></script>
+	<script src="../old/js4/compile.js"></script>
 </head>
 <body>
 
