--- a/test/module.html
+++ b/test/module.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
-	<script src="../src/js/observable.js"></script>
-	<!--<script src="js/watch.js0"></script>-->
-	<!--<script src="js/module.js0"></script>-->
-	<!--<script src="js/parse.js0"></script>-->
-	<!--<script src="js/compile.js0"></script>-->
+	<script src="../old/js4/observable.js"></script>
+	<!--<script src="js4/watch.js0"></script>-->
+	<!--<script src="js4/module.js0"></script>-->
+	<!--<script src="js4/parse.js0"></script>-->
+	<!--<script src="js4/compile.js0"></script>-->
 </head>
 <body>
 
